# libdvdetect

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  config.h.in  configure  configure.ac  mk  mk32  mk64  mkconf  mkconf32  mkwin
Qt/guiexample/: aboutdlg.cpp  aboutdlg.h  dvdexplorerdlg.cpp  dvdexplorerdlg.h  dvdexplorerdlg.ui  dvdlanguage.cpp  dvdlanguage.h  editdetailsdlg.cpp  editdetailsdlg.h  editdetailsdlg.ui  editoptionsdlg.cpp  editoptionsdlg.h  editoptionsdlg.ui  explorerutils.cpp  explorerutils.h  guiexample.pro  guiexampleLOCAL.pro  guiexamplestatic.pro  main.cpp  mainwindow.cpp  mainwindow.h  openfromwebdlg.cpp  openfromwebdlg.h  openfromwebdlg.ui  searchtextdlg.cpp  searchtextdlg.h  searchtextdlg.ui
VS2010/: ReadMe.txt  dllmain.cpp  libdvdetect.sln  libdvdetect.vcxproj  libdvdetect.vcxproj.filters  version.h
branches/RELEASE/libdvdetect/: ChangeLog  INSTALL  Makefile.am  README  THANKS  TODO  configure.ac  mk  mk64  mkconf64  mkconfcygwin
branches/RELEASE/libdvdetect/Qt/: README
branches/RELEASE/libdvdetect/Qt/guiexample/: aboutdlg.cpp  aboutdlg.ui  dvdexplorerdlg.cpp  dvdexplorerdlg.h  dvdexplorerdlg.ui  dvdlanguage.cpp  editdetailsdlg.cpp  editdetailsdlg.h  editdetailsdlg.ui  editoptionsdlg.cpp  editoptionsdlg.ui  explorerutils.cpp  explorerutils.h  guiexample.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openfromwebdlg.cpp  openfromwebdlg.h  searchtextdlg.cpp  searchtextdlg.h
branches/RELEASE/libdvdetect/VS2010/: dllmain.cpp
branches/RELEASE/libdvdetect/doc/: doxygen.conf
branches/RELEASE/libdvdetect/doc/logo/: libdvdetectLogo.xcf
branches/RELEASE/libdvdetect/doc/screenshots/: libDVDetectExplorer.xcf
branches/RELEASE/libdvdetect/examples/: Makefile.am  README
branches/RELEASE/libdvdetect/examples/c/: Makefile.am  dvdinfo.c  dvdlookup.c  dvdsubmit.c  testinfo  testlookup
branches/RELEASE/libdvdetect/examples/c++/: README  dvdinfocxx.cpp  dvdlookupcxx.cpp  dvdsubmitcxx.cpp  testlookup  testsubmit  xxx
branches/RELEASE/libdvdetect/include/: Makefile.am
branches/RELEASE/libdvdetect/include/dvdetect/: Makefile.am  dvdcell.h  dvddatabase.h  dvdetect.h  dvdetectbase.h  dvdetectc++.h  dvdetectdll.h  dvdfile.h  dvdparse.h  dvdpgc.h  dvdptt.h  dvdpttvmg.h  dvdtitle.h  dvdunit.h  dvdutils.h  types.h  vector_ptr.h  version.h.in
branches/RELEASE/libdvdetect/lib/: Makefile.am  common.h  commonwin32.h  compat.h  dvdcell.cpp  dvddatabase.cpp  dvdetectbase.cpp  dvdetectcglue.cpp  dvdfile.cpp  dvdparse.cpp  dvdpgc.cpp  dvdprogram.cpp  dvdpttvmg.cpp  dvdpttvts.cpp  dvdtitle.cpp  dvdunit.cpp  dvdutils.cpp  http.cpp  http.h  localutils.cpp  localutils.h  md5.c  vmg_ifo.h  vts_ifo.h  xmldoc.cpp  xmldoc.h  xmldocparser.cpp  xmldocparser.h
branches/RELEASE/libdvdetect/lib/emu/: strptime.c
branches/RELEASE/libdvdetect/php/: index.php  query.php  schema.xsd  search.php  submit.php
branches/RELEASE/libdvdetect/php/inc/: functions.buildxml.inc.php  functions.inc.php  functions.query.inc.php  functions.submit.inc.php  index.php
branches/RELEASE/libdvdetect/tests/xml/: Metal - A Headbanger's Journey.xml
branches/RELEASE/libdvdetect/win/tinyxml/: tinyxml.h
doc/: build  doxygen.conf
doc/screenshots/: libDVDetectExplorer.xcf
examples/: Makefile.in
examples/c/: Makefile.am  Makefile.in  README  dvdinfo.c  dvdlookup.c  dvdsubmit.c  testinfo  testsubmit  xxx
examples/c++/: Makefile.am  Makefile.in  dvdinfocxx.cpp  dvdlookupcxx.cpp  testinfo  testlookup  testsubmit  xxx
include/: Makefile.in
include/dvdetect/: Makefile.am  Makefile.in  dvdcell.h  dvddatabase.h  dvdetect.h  dvdetectbase.h  dvdetectc++.h  dvdetectdll.h  dvdfile.h  dvdparse.h  dvdpgc.h  dvdprogram.h  dvdpttvmg.h  dvdpttvts.h  dvdtitle.h  dvdunit.h  dvdutils.h  types.h  vector_ptr.h  version.h  version.h.in
lib/: Makefile.am  Makefile.in  common.h  commonwin32.h  compat.h  dvdcell.cpp  dvddatabase.cpp  dvdetectbase.cpp  dvdetectcglue.cpp  dvdfile.cpp  dvdparse.cpp  dvdpgc.cpp  dvdprogram.cpp  dvdptt.cpp  dvdpttvmg.cpp  dvdpttvts.cpp  dvdtitle.cpp  dvdunit.cpp  dvdutils.cpp  http.cpp  http.h  libdvdetect.rc  localutils.cpp  localutils.h  md5.h  vmg_ifo.h  vts_ifo.h  xmldoc.cpp  xmldoc.h  xmldocbuilder.cpp  xmldocbuilder.h  xmldocparser.cpp  xmldocparser.h
php/: index.php  query.php  robots.txt  search.php  submit.php
php/inc/: functions.inc.php  functions.query.inc.php  functions.search.inc.php  functions.submit.inc.php  index.php
sql/: dbdvdetect.mysql.sql
tests/: Makefile.am  Makefile.in
win/: readme.txt
