# dvdetect DVD detection, analysis & DVDETECT lookup library
#
# Copyright (C) 2013 Norbert Schlia <nschlia@dvdetect.de>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

pkgincludedir=$(includedir)/dvdetect
pkginclude_HEADERS = \
	dvdcell.h \
	dvddatabase.h \
	dvdetect.h \
	dvdetectbase.h \
	dvdetectc++.h \
	dvdetectdll.h \
	dvdfile.h \
	dvdparse.h \
	dvdpgc.h \
	dvdprogram.h \
	dvdpttvmg.h \
	dvdpttvts.h \
	dvdtitle.h \
	dvdunit.h \
	dvdutils.h \
	types.h \
	vector_ptr.h \
	version.h
noinst_HEADERS = 

EXTRA_DIST = version.h.in
